objects/ERP_Mapping__c.object
<CustomObject>
    <description>R3 - custom object for LSO Data Mapping</description>
    <fields>
        <fullName>Country_LSO_Unique__c</fullName>
        <description>R3 - Field used to check duplicate on LSO Description for same country</description>
        <label>Country LSO Unique</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_LSO__c</fullName>
        <formula>TEXT(Country__c)+ LSO__c</formula>
        <label>Country LSO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>R3 - Country</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Arab Emirates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saint Barthélemy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>R3 - Description field for LSO</description>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERPMapping_Unique__c</fullName>
        <label>ERPMapping_Unique</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ERP_ID__c</fullName>
        <description>R3 - ERP ID</description>
        <label>ERP ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Mapping_Combination__c</fullName>
        <description>R3 - Combined formula field of ERP_ID__c , Sales_Organization__c , Distribution_Channel__c , Division__c used to query the ERP Mapping object.</description>
        <formula>ERP_ID__c &amp; Text(SAP_Sales_Organization__c) &amp; Text(SAP_Distribution_Channel__c) &amp; Text(SAP_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP Mapping Combination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBU__c</fullName>
        <description>R3 - field LBU</description>
        <label>LBU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSO_Description__c</fullName>
        <description>R3 - Formula field to concatenate LSO and Description</description>
        <formula>LSO__c &amp;&apos; &apos; &amp; &apos;::&apos; &amp; &apos; &apos; &amp;  Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LSO Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LSO__c</fullName>
        <description>R3 - field LSO</description>
        <label>LSO</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Distribution_Channel__c</fullName>
        <description>R3 - Distribution Channel</description>
        <label>SAP Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Division__c</fullName>
        <inlineHelpText>R3 - field Division</inlineHelpText>
        <label>SAP Division</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>71</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>72</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>73</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAP_Sales_Organization__c</fullName>
        <description>R3 - Sales Organization</description>
        <label>SAP Sales Organization</label>
        <picklist>
            <picklistValues>
                <fullName>0001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YY01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0050</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0051</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0061</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0065</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0070</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0080</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0090</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0094</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0180</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0310</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0503</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ERP Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SAP_Sales_Organization__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>SAP_Distribution_Channel__c</columns>
        <columns>SAP_Division__c</columns>
        <columns>Country__c</columns>
        <columns>LSO__c</columns>
        <columns>LBU__c</columns>
        <columns>Description__c</columns>
        <columns>Country_LSO__c</columns>
        <columns>LSO_Description__c</columns>
        <columns>ERPMapping_Unique__c</columns>
        <columns>ERP_Mapping_Combination__c</columns>
        <columns>Country_LSO_Unique__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Spain_second</fullName>
        <columns>NAME</columns>
        <columns>ERP_ID__c</columns>
        <columns>SAP_Sales_Organization__c</columns>
        <columns>SAP_Distribution_Channel__c</columns>
        <columns>SAP_Division__c</columns>
        <columns>Country__c</columns>
        <columns>LSO__c</columns>
        <columns>LBU__c</columns>
        <columns>Description__c</columns>
        <columns>Country_LSO__c</columns>
        <columns>LSO_Description__c</columns>
        <columns>ERPMapping_Unique__c</columns>
        <columns>ERP_Mapping_Combination__c</columns>
        <columns>Country_LSO_Unique__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Spain</value>
        </filters>
        <label>Spain-second</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ERP Map # - {0000}</displayFormat>
        <label>LSO Data Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Mapping</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>